--- a/ScheduleTrackerApp/src/scheduletrackerapp/view/Calendar.fxml
+++ b/ScheduleTrackerApp/src/scheduletrackerapp/view/Calendar.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
+<?import javafx.scene.effect.*?>
 <?import javafx.scene.text.*?>
 <?import java.lang.*?>
 <?import javafx.scene.control.*?>
@@ -15,10 +17,10 @@
    <top>
       <AnchorPane prefHeight="50.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
-            <ComboBox fx:id="viewComboBox" layoutX="731.0" layoutY="9.0" maxWidth="105.0" onAction="#comboBoxClicked" prefHeight="33.0" prefWidth="105.0" stylesheets="@Calendar.css" AnchorPane.rightAnchor="14.0" />
+            <ComboBox fx:id="viewComboBox" layoutX="731.0" layoutY="9.0" maxWidth="145.0" minWidth="145.0" onAction="#comboBoxClicked" prefHeight="33.0" prefWidth="145.0" stylesheets="@Calendar.css" AnchorPane.bottomAnchor="8.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="9.0" />
             <Button fx:id="reportButton" layoutX="138.0" layoutY="8.0" mnemonicParsing="false" onAction="#reportButtonClicked" prefHeight="31.0" prefWidth="92.0" stylesheets="@Calendar.css" text="Reports" />
             <Button fx:id="customerButton" layoutX="14.0" layoutY="8.0" mnemonicParsing="false" onAction="#customerButtonClicked" stylesheets="@Calendar.css" text="Customers" />
-            <Label alignment="CENTER" layoutX="628.0" layoutY="15.0" prefHeight="21.0" prefWidth="50.0" text="Filter:" textFill="#797979">
+            <Label alignment="CENTER" layoutX="628.0" layoutY="15.0" prefHeight="21.0" prefWidth="50.0" text="Filter:" textFill="#797979" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="162.0" AnchorPane.topAnchor="15.0">
                <font>
                   <Font name="System Bold" size="15.0" />
                </font>
@@ -27,23 +29,23 @@
       </AnchorPane>
    </top>
    <center>
-      <TableView fx:id="calendarTableView" maxHeight="590.0" prefHeight="410.0" prefWidth="800.0" style="-fx-background-color: #FED0BE;" BorderPane.alignment="CENTER">
+      <TableView fx:id="calendarTableView" maxHeight="550.0" maxWidth="801.0" minHeight="500.0" minWidth="800.0" prefHeight="500.0" prefWidth="800.0" style="-fx-background-color: #FED0BE;" BorderPane.alignment="CENTER">
         <columns>
-          <TableColumn fx:id="startTableColumn" prefWidth="140.0" text="Start" />
-            <TableColumn fx:id="endTableColumn" prefWidth="140.0" text="End" />
-          <TableColumn fx:id="titleTableColumn" prefWidth="130.0" text="Title" />
-            <TableColumn fx:id="typeTableColumn" prefWidth="140.0" text="Type" />
-            <TableColumn fx:id="customerTableColumn" prefWidth="120.0" text="Customer" />
-            <TableColumn fx:id="consultantTableColumn" prefWidth="129.0" text="Consultant" />
+          <TableColumn fx:id="startTableColumn" prefWidth="158.0" text="Start" />
+            <TableColumn fx:id="endTableColumn" prefWidth="160.0" text="End" />
+          <TableColumn fx:id="titleTableColumn" prefWidth="134.0" text="Title" />
+            <TableColumn fx:id="typeTableColumn" prefWidth="125.0" text="Type" />
+            <TableColumn fx:id="customerTableColumn" prefWidth="114.0" text="Customer" />
+            <TableColumn fx:id="consultantTableColumn" prefWidth="108.0" text="Consultant" />
         </columns>
       </TableView>
    </center>
    <bottom>
-      <AnchorPane prefHeight="53.0" prefWidth="800.0" BorderPane.alignment="CENTER">
+      <AnchorPane focusTraversable="true" prefHeight="53.0" prefWidth="800.0" BorderPane.alignment="TOP_CENTER">
          <children>
-            <Button fx:id="editButton" layoutX="355.0" layoutY="11.0" mnemonicParsing="false" onAction="#editButtonClicked" prefHeight="30.0" prefWidth="90.0" stylesheets="@Calendar.css" text="Edit" />
-            <Button fx:id="addButton" layoutX="232.0" layoutY="11.0" mnemonicParsing="false" onAction="#addButtonClicked" prefHeight="30.0" prefWidth="90.0" stylesheets="@Calendar.css" text="Add" />
-            <Button fx:id="deleteButton" layoutX="479.0" layoutY="11.0" mnemonicParsing="false" onAction="#deleteButtonClicked" prefHeight="30.0" prefWidth="90.0" stylesheets="@Calendar.css" text="Delete" />
+            <Button fx:id="editButton" layoutX="355.0" layoutY="11.0" maxWidth="90.0" minWidth="90.0" mnemonicParsing="false" onAction="#editButtonClicked" prefHeight="30.0" prefWidth="90.0" stylesheets="@Calendar.css" text="Edit" AnchorPane.bottomAnchor="11.0" AnchorPane.topAnchor="11.0" />
+            <Button fx:id="addButton" layoutX="233.0" layoutY="11.0" maxWidth="90.0" minWidth="90.0" mnemonicParsing="false" onAction="#addButtonClicked" prefHeight="30.0" prefWidth="90.0" stylesheets="@Calendar.css" text="Add" textAlignment="CENTER" AnchorPane.bottomAnchor="11.0" AnchorPane.topAnchor="11.0" />
+            <Button fx:id="deleteButton" layoutX="479.0" layoutY="11.0" maxWidth="90.0" minWidth="90.0" mnemonicParsing="false" onAction="#deleteButtonClicked" prefHeight="30.0" prefWidth="90.0" stylesheets="@Calendar.css" text="Delete" AnchorPane.bottomAnchor="11.0" AnchorPane.topAnchor="11.0" />
          </children>
       </AnchorPane>
    </bottom>
