Added exit button to calendar page. Changed button colors and fixed UI flexibility on some pages.

--- a/ScheduleTrackerApp/src/scheduletrackerapp/view/Calendar.css
+++ b/ScheduleTrackerApp/src/scheduletrackerapp/view/Calendar.css
@@ -5,14 +5,14 @@
 */
 #customerButton
 {
-    -fx-background-color: linear-gradient(#FF3701,#313131); 
+    -fx-background-color: linear-gradient(#03BFE3,#313131); 
     -fx-background-radius: 10; 
     -fx-font-weight: bold; -fx-text-fill: #FFFFFF;
 }
 
 #reportButton
 {
-    -fx-background-color: linear-gradient(#FF3701,#313131); 
+    -fx-background-color: linear-gradient(#03BFE3,#313131); 
     -fx-background-radius: 10; 
     -fx-font-weight: bold; -fx-text-fill: #FFFFFF;
 }
@@ -26,21 +26,28 @@
 
 #addButton
 {
-    -fx-background-color: linear-gradient(#FF3701,#313131); 
+    -fx-background-color: linear-gradient(#03BFE3,#313131); 
     -fx-background-radius: 10; 
     -fx-font-weight: bold; -fx-text-fill: #FFFFFF;
 }
 
 #editButton
 {
-    -fx-background-color: linear-gradient(#FF3701,#313131); 
+    -fx-background-color: linear-gradient(#03BFE3,#313131); 
     -fx-background-radius: 10; 
     -fx-font-weight: bold; -fx-text-fill: #FFFFFF;
 }
 
 #deleteButton
 {
-    -fx-background-color: linear-gradient(#FF3701,#313131); 
+    -fx-background-color: linear-gradient(#03BFE3,#313131); 
+    -fx-background-radius: 10; 
+    -fx-font-weight: bold; -fx-text-fill: #FFFFFF;
+}
+
+#exitButton
+{
+    -fx-background-color: linear-gradient(#FF3701,#313131);
     -fx-background-radius: 10; 
     -fx-font-weight: bold; -fx-text-fill: #FFFFFF;
 }
