--- a/ScheduleTrackerApp/src/scheduletrackerapp/view/Customer.css
+++ b/ScheduleTrackerApp/src/scheduletrackerapp/view/Customer.css
@@ -5,21 +5,21 @@
 */
 #addButton
 {
-    -fx-background-color: linear-gradient(#FF3701,#313131); 
+    -fx-background-color: linear-gradient(#03BFE3,#313131); 
     -fx-background-radius: 10; 
     -fx-font-weight: bold; -fx-text-fill: #FFFFFF;
 }
 
 #editButton
 {
-    -fx-background-color: linear-gradient(#FF3701,#313131); 
+    -fx-background-color: linear-gradient(#03BFE3,#313131); 
     -fx-background-radius: 10; 
     -fx-font-weight: bold; -fx-text-fill: #FFFFFF;
 }
 
 #deleteButton
 {
-    -fx-background-color: linear-gradient(#FF3701,#313131); 
+    -fx-background-color: linear-gradient(#03BFE3,#313131); 
     -fx-background-radius: 10; 
     -fx-font-weight: bold; -fx-text-fill: #FFFFFF;
 }
