--- a/ScheduleTrackerApp/src/scheduletrackerapp/view/EditCustomer.css
+++ b/ScheduleTrackerApp/src/scheduletrackerapp/view/EditCustomer.css
@@ -5,14 +5,14 @@
 */
 #saveButton
 {
-    -fx-background-color: linear-gradient(#FF3701,#313131); 
+    -fx-background-color: linear-gradient(#03BFE3,#313131); 
     -fx-background-radius: 10; 
     -fx-font-weight: bold; -fx-text-fill: #FFFFFF;
 }
 
 #cancelButton
 {
-    -fx-background-color: linear-gradient(#FF3701,#313131); 
+    -fx-background-color: linear-gradient(#03BFE3,#313131); 
     -fx-background-radius: 10; 
     -fx-font-weight: bold; -fx-text-fill: #FFFFFF;
 }
