--- a/ScheduleTrackerApp/src/scheduletrackerapp/view/Calendar.fxml
+++ b/ScheduleTrackerApp/src/scheduletrackerapp/view/Calendar.fxml
@@ -29,7 +29,7 @@
       </AnchorPane>
    </top>
    <center>
-      <TableView fx:id="calendarTableView" maxHeight="550.0" maxWidth="801.0" minHeight="500.0" minWidth="800.0" prefHeight="500.0" prefWidth="800.0" style="-fx-background-color: #FED0BE;" BorderPane.alignment="CENTER">
+      <TableView fx:id="calendarTableView" minHeight="500.0" minWidth="800.0" prefHeight="500.0" prefWidth="800.0" style="-fx-background-color: #FED0BE;" BorderPane.alignment="CENTER">
         <columns>
           <TableColumn fx:id="startTableColumn" prefWidth="158.0" text="Start" />
             <TableColumn fx:id="endTableColumn" prefWidth="160.0" text="End" />
@@ -43,9 +43,10 @@
    <bottom>
       <AnchorPane focusTraversable="true" prefHeight="53.0" prefWidth="800.0" BorderPane.alignment="TOP_CENTER">
          <children>
-            <Button fx:id="editButton" layoutX="355.0" layoutY="11.0" maxWidth="90.0" minWidth="90.0" mnemonicParsing="false" onAction="#editButtonClicked" prefHeight="30.0" prefWidth="90.0" stylesheets="@Calendar.css" text="Edit" AnchorPane.bottomAnchor="11.0" AnchorPane.topAnchor="11.0" />
-            <Button fx:id="addButton" layoutX="233.0" layoutY="11.0" maxWidth="90.0" minWidth="90.0" mnemonicParsing="false" onAction="#addButtonClicked" prefHeight="30.0" prefWidth="90.0" stylesheets="@Calendar.css" text="Add" textAlignment="CENTER" AnchorPane.bottomAnchor="11.0" AnchorPane.topAnchor="11.0" />
-            <Button fx:id="deleteButton" layoutX="479.0" layoutY="11.0" maxWidth="90.0" minWidth="90.0" mnemonicParsing="false" onAction="#deleteButtonClicked" prefHeight="30.0" prefWidth="90.0" stylesheets="@Calendar.css" text="Delete" AnchorPane.bottomAnchor="11.0" AnchorPane.topAnchor="11.0" />
+            <Button fx:id="editButton" layoutX="355.0" layoutY="11.0" maxWidth="90.0" minWidth="90.0" mnemonicParsing="false" onAction="#editButtonClicked" prefHeight="30.0" prefWidth="90.0" stylesheets="@Calendar.css" text="Edit" AnchorPane.bottomAnchor="11.0" AnchorPane.leftAnchor="273.0" AnchorPane.topAnchor="11.0" />
+            <Button fx:id="addButton" layoutX="233.0" layoutY="11.0" maxWidth="90.0" minWidth="90.0" mnemonicParsing="false" onAction="#addButtonClicked" prefHeight="30.0" prefWidth="90.0" stylesheets="@Calendar.css" text="Add" textAlignment="CENTER" AnchorPane.bottomAnchor="11.0" AnchorPane.leftAnchor="150.0" AnchorPane.topAnchor="11.0" />
+            <Button fx:id="deleteButton" layoutX="479.0" layoutY="11.0" maxWidth="90.0" minWidth="90.0" mnemonicParsing="false" onAction="#deleteButtonClicked" prefHeight="30.0" prefWidth="90.0" stylesheets="@Calendar.css" text="Delete" AnchorPane.bottomAnchor="11.0" AnchorPane.rightAnchor="273.0" AnchorPane.topAnchor="11.0" />
+            <Button fx:id="exitButton" layoutX="597.0" layoutY="11.0" maxWidth="90.0" minWidth="90.0" mnemonicParsing="false" onAction="#exitButtonClicked" prefHeight="30.0" prefWidth="90.0" stylesheets="@Calendar.css" text="Exit" AnchorPane.bottomAnchor="11.0" AnchorPane.rightAnchor="150.0" AnchorPane.topAnchor="11.0" />
          </children>
       </AnchorPane>
    </bottom>
