--- a/ScheduleTrackerApp/src/scheduletrackerapp/view/Reports.fxml
+++ b/ScheduleTrackerApp/src/scheduletrackerapp/view/Reports.fxml
@@ -28,7 +28,7 @@
    <top>
       <AnchorPane prefHeight="70.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
-          <Button fx:id="generateButton" layoutX="596.0" layoutY="20.0" mnemonicParsing="false" onAction="#generateButtonClicked" prefHeight="27.0" prefWidth="90.0" stylesheets="@Reports.css" text="Generate" />
+          <Button fx:id="generateButton" layoutX="596.0" layoutY="20.0" mnemonicParsing="false" onAction="#generateButtonClicked" prefHeight="27.0" prefWidth="90.0" stylesheets="@Reports.css" text="Generate" AnchorPane.rightAnchor="14.0" />
             <Label layoutX="29.0" layoutY="2.0" text="Report Type">
                <font>
                   <Font name="System Bold" size="15.0" />
